bk_ida/gccida/c3/calls_function_1
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/calls_function_1/src/calls.c:728:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *elements; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/calls_function_1/src/calls.c:730:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v11; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/calls_function_1/src/calls.c:738:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v19; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/calls_function_1/src/calls.c:739:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *imag; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/calls_function_1/src/calls.c:744:26: error: use of undeclared identifier 'tree_code'; did you mean 'tree_cons'?
rtl_op = first_rtl_op( ( tree_code)*( ( unsigned __int8 *)&exp->block.common + 16)); 
                         ^~~~~~~~~
                         tree_cons
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/calls_function_1/src/tree.h:2477:13: note: 'tree_cons' declared here
extern tree tree_cons                   PARAMS ((tree, tree, tree));
            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/calls_function_1/src/calls.c:744:36: error: invalid operands to binary expression ('tree (tree, tree, tree)' (aka 'union tree_node *(union tree_node *, union tree_node *, union tree_node *)') and 'unsigned char *')
rtl_op = first_rtl_op( ( tree_code)*( ( unsigned __int8 *)&exp->block.common + 16)); 
                       ~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/calls_function_1/src/calls.c:764:20: error: expected expression
v11 = ( tree_node *)i[13]; 
                   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/calls_function_1/src/calls.c:764:9: error: use of undeclared identifier 'tree_node'
v11 = ( tree_node *)i[13]; 
        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/calls_function_1/src/calls.c:819:20: error: expected expression
v19 = ( tree_node *)*( ( _QWORD *)&chain->vector.elements + v18); 
                   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/calls_function_1/src/calls.c:819:9: error: use of undeclared identifier 'tree_node'
v19 = ( tree_node *)*( ( _QWORD *)&chain->vector.elements + v18); 
        ^
10 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/calls_function_1/src/obj/calls.o] Error 1
